# reovim

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
assets/: Emoji.txt  Ligatures.txt
benches/: emojito-find.rs
examples/: emoji-inspect.rs  emoji.rs  fc-emoji.rs  font-metrics.rs  fonts.rs  fontset.rs  gtk-emoji.rs  hb.rs  viewport.rs
src/: app.rs  color.rs  components.rs  cursor.rs  elements.rs  event_aggregator.rs  factory.rs  fontloader.rs  grapheme.rs  keys.rs  loggingchan.rs  main.rs  messager.rs  metrics.rs  pos.rs  rect.rs  running_tracker.rs  settings.rs  style.rs  vim_editor.rs  vim_window.rs
src/bridge/: clipboard.rs  command.rs  create.rs  events.rs  handler.rs  mod.rs  setup.rs  tx.rs  ui_commands.rs
src/components/: bridge.rs  command_prompt.rs  notification.rs  vimgrids.rs
src/cursor/: component.rs  cursor.rs  mod.rs  model.rs  state.rs  vfx.rs
src/cursor_renderer/: mod.rs
src/text/: font.rs  layout.rs  mod.rs  text_cell.rs  text_line.rs
src/vimview/: bingrid.rs  commandview.rs  grid.rs  gridview.rs  highlights.rs  messageview.rs  mod.rs  textbuf.rs  widgets.rs  window.rs
src/widgets/: board.rs
textview/: Cargo.toml  build.rs
textview/src/: attr.rs  box_drawing.rs  builtin_font.rs  color.rs  consts.rs  drawing.rs  font_metrics.rs  lib.rs  minifont.rs
