[package]
name = "rv"
version = "0.2.0-alpha"
edition = "2021"
rust-version = "1.56"
license = "MIT OR Apache-2.0"
repository = "https://github.com/songww/reovim"
description = "This is a graphical user interface for Neovim, powered by gtk4-rs and reml4."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
libm = "0.2"
which = "4"
anyhow = "1"
chrono = "0.4"
fragile = "1"
futures = "0.3"
tracker = "0.1"
once_cell = "1"
derivative = "2"
derive-new = "0.5"
env_logger = "0.9"
rustc-hash = "1"
vector-map = "1"
pin-project = "1"
async-trait = "0.1"
derive_more = "0.99"
freetype-rs = "0.30"
unicode-segmentation = "1"

clap = { version = "3", features = ["derive", "env"] }
chan = { version = "0.5", package = "crossbeam-channel" }
nvim = { version = "0.4", package = "nvim-rs", features = ["use_tokio"] }

relm4 = { version = "0.4", features = ["tokio-rt", "libadwaita"] }
relm-macros = { version = "0.4", package = "relm4-macros" }
relm-components = { version = "0.4", package = "relm4-components" }

tokio-util = { version = "0.7", features = ["compat"] }
parking_lot = "0.12.0"

[dependencies.tokio]
version = "1"
features = [
  "process",
  "io-util",
  "sync",
  "rt",
  "time",
  "signal",
  "rt-multi-thread",
]

[dependencies.harfbuzz-sys]
git = "https://github.com/songww/rust-harfbuzz"
branch = "migrate-to-meson"
features = ["bindgen"]
default-features = false

[dependencies.harfbuzz]
git = "https://github.com/songww/rust-harfbuzz"
branch = "migrate-to-meson"
features = ["bindgen"]
default-features = false

[dependencies.adw]
package = "libadwaita"
version = "0.1"

[dependencies.cairo]
version = "0.15"
package = "cairo-rs"
features = ["v1_16", "png"]

[dependencies.pango]
version = "0.15"
package = "pango"
features = ["v1_50"]

[dependencies.pangocairo]
version = "0.15"
package = "pangocairo"

[dependencies.graphene]
version = "0.15"
package = "graphene-rs"

[dependencies.gtk]
version = "0.4"
package = "gtk4"
features = ["v4_6"]

[dependencies.glib]
version = "0.15"
package = "glib"
features = ["v2_70"]

[profile.release]
debug = true
