[package]
name = "rv"
version = "0.2.0-alpha"
edition = "2021"
rust-version = "1.56"
license = "MIT OR Apache-2.0"
repository = "https://github.com/songww/reovim"
description = "This is a graphical user interface for Neovim, powered by gtk4-rs and reml4."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
libm = "0.2"
which = "4"
anyhow = "1"
chrono = "0.4"
futures = "0.3"
tracker = "0.1"
once_cell = "1"
derivative = "2"
derive-new = "0.5"
env_logger = "0.9"
rustc-hash = "1"
vector-map = "1"
pin-project = "1"
async-trait = "0.1"
parking_lot = "0.12"
derive_more = "0.99"
freetype-rs = "0.30"
xi-unicode = "0.3"
unicode-script = "0.5"
unicode-segmentation = "1"

clap = { version = "3", features = ["derive", "env"] }
chan = { version = "0.5", package = "crossbeam-channel" }
nvim = { version = "0.4", package = "nvim-rs", features = ["use_tokio"] }

relm-macros = { version = "0.4", package = "relm4-macros", git = "https://github.com/songww/relm4", branch = "main" }
relm-components = { version = "0.4", package = "relm4-components", git = "https://github.com/songww/relm4", branch = "main" }

tokio-util = { version = "0.7", features = ["compat"] }

[dependencies.relm4]
version = "0.4"
features = ["all"]
git = "https://github.com/songww/relm4"
branch = "main"

[dependencies.tokio]
version = "1"
features = [
  "process",
  "io-util",
  "sync",
  "rt",
  "time",
  "signal",
  "rt-multi-thread",
]

[dependencies.harfbuzz-sys]
# git = "https://github.com/songww/rust-harfbuzz"
path = "../rust-harfbuzz/harfbuzz-sys"
# branch = "migrate-to-meson"
features = ["bindgen"]
default-features = false
package = "songww-harfbuzz-sys"

[dependencies.harfbuzz]
# git = "https://github.com/songww/rust-harfbuzz"
# branch = "migrate-to-meson"
path = "../rust-harfbuzz/harfbuzz"
features = ["bindgen"]
default-features = false
package = "songww-harfbuzz-rs"

[dependencies.adw]
package = "libadwaita"
# version = "0.2"
git = "https://gitlab.gnome.org/World/Rust/libadwaita-rs"

[dependencies.cairo]
# version = "0.16"
package = "cairo-rs"
features = ["v1_16", "png", "freetype"]
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.pango]
# version = "0.16"
package = "pango"
features = ["v1_50"]
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.pangocairo]
# version = "0.16"
package = "pangocairo"
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.graphene]
# version = "0.16"
package = "graphene-rs"
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.glib]
# version = "0.16"
package = "glib"
features = ["v2_70"]
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.gtk]
# version = "0.5"
package = "gtk4"
features = ["v4_6"]
git = "https://github.com/gtk-rs/gtk4-rs"

[profile.release]
debug = true

[dev-dependencies]
criterion = "0.3"
fontconfig-rs = { path = "../fontconfig-rs" }
