[package]
name = "rv"
version = "0.2.0-alpha"
edition = "2021"
rust-version = "1.56"
license = "MIT OR Apache-2.0"
repository = "https://github.com/songww/reovim"
description = "This is a graphical user interface for Neovim, powered by gtk4-rs and reml4."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
which = "4"
anyhow = "1"
flume = "0.10"
futures = "0.3"
tracker = "0.2"
arc-swap = "1.6"
once_cell = "1"

debug = { version = "0.5.1", package = "custom_debug" }
derive-new = "0.5"
derive_more = "0.99"

rustc-hash = "1"
vector-map = "1"
pin-project = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive", "env"] }
nvim = { version = "0.5", package = "nvim-rs", features = ["use_tokio"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }

tokio = { version = "1", features = [
  "process",
  "io-util",
  "sync",
  "rt",
  "time",
  "signal",
  "rt-multi-thread",
] }
tokio-util = { version = "0.7", features = ["compat"] }

[dependencies.relm4]
# git = "https://github.com/Relm4/Relm4"
# branch = "next"
path = "./relm/relm4"
package = "relm4"
# version = "0.6.0-alpha.1"
features = ["gnome_43", "libadwaita", "macros"]

# [dependencies.relm-macros]
# git = "https://github.com/Relm4/Relm4"
# branch = "next"
# path = "./relm/relm4-macros"
# version = "0.6.0-alpha.1"
# package = "relm4-macros"

# [dependencies.relm-components]
# git = "https://github.com/Relm4/Relm4"
# branch = "next"
# path = "./relm/relm4-components"
# version = "0.6.0-alpha.1"
# package = "relm4-components"

[dependencies.adw]
package = "libadwaita"
version = "0.3"

[dependencies.cairo]
version = "0.17"
package = "cairo-rs"
features = ["v1_16", "png"]

[dependencies.pango]
version = "0.17"
package = "pango"
features = ["v1_50"]

[dependencies.pangocairo]
version = "0.17"
package = "pangocairo"

[dependencies.graphene]
version = "0.17"
package = "graphene-rs"

[dependencies.gtk]
version = "0.6"
package = "gtk4"
features = ["v4_6"]

[dependencies.glib]
version = "0.17"
package = "glib"
features = ["v2_70"]
